# paypal-rust

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
examples/: order.rs  payments.rs  webhooks.rs
src/: lib.rs
src/client/: app_info.rs  auth.rs  endpoint.rs  error.rs  mod.rs  paypal.rs  request.rs  response.rs
src/resources/: address.rs  address_details.rs  address_portable.rs  amount_breakdown.rs  amount_with_breakdown.rs  authorization_status_details.rs  authorization_with_additional_data.rs  bancontact_request.rs  blik_request.rs  capture.rs  capture_status_details.rs  card_address_portable.rs  card_request.rs  card_response.rs  card_stored_credential.rs  date_no_time.rs  email.rs  eps_request.rs  exchange_rate.rs  experience_context_base.rs  giropay_request.rs  ideal_request.rs  item.rs  link_description.rs  mod.rs  money.rs  my_bank_request.rs  name.rs  net_amount_breakdown.rs  network_transaction_reference.rs  order.rs  order_application_context.rs  order_capture_request_payment_source.rs  order_payment_source.rs  p24_request.rs  patch.rs  payee.rs  payee_base.rs  payer.rs  payment_collection.rs  (+33 more)
src/resources/enums/: authorization_status_reason.rs  avs_code.rs  capture_status.rs  capture_status_reason.rs  card_type.rs  category.rs  country_codes.rs  currency_code.rs  cvv_code.rs  disembursement_mode.rs  dispute_category.rs  http_method.rs  landing_page.rs  mod.rs  network.rs  op.rs  order_intent.rs  phone_type.rs  (+20 more)
src/utils/: already_captured.rs  get_approve_url.rs  get_authorization_id_from_order.rs  get_maximum_reauthorization_amount_for_order.rs  mod.rs
