[package]
name = "paypal-rust"
version = "0.0.2-alpha.1"
description = "Rust bindings for the PayPal REST API"
rust-version = "1.64.0"
authors = ["Velican Akcakaya <v.akcakaya@hanntech.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["api-bindings"]
homepage = "https://github.com/HannTechGmbH/paypal-rust/"
repository = "https://github.com/HannTechGmbH/paypal-rust/"
keywords = ["paypal", "rest", "api", "async"]
edition = "2021"

[lib]
name = "paypal_rust"

[features]
utils = []

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
serde_qs = "0.10.0"
serde_urlencoded = "0.7.1"
serde_with = "2.0.1"
base64 = "0.13.0"
http-types = "2.12.0"
reqwest-middleware = "0.1.6"
reqwest-retry = "0.1.5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["full"] }
dotenv = "0.15.0"

[[example]]
name = "order"

[[example]]
name = "payments"

[[example]]
name = "webhooks"

